--- a/css.css
+++ b/css.css
@@ -21,13 +21,18 @@ img{
     margin-bottom: 50px;
 }
 #index-top{
-    background-image: url("./Te Puia Resources/Images/mudpool.jpg");
+    /* Center Text */
+    display: grid;
+    place-content: center;
+    /* Add background image */
+    background-image: 
+    linear-gradient(180deg, rgba(255, 255, 255, 0.5),
+    rgba(255, 94, 83, 0.5)),
+    url("./Te Puia Resources/Images/mudpool.jpg");
     background-position: center;
-    background-color: rgba(255, 94, 83, 50);
     background-repeat: no-repeat;
-    background-size: 100%;
-    height: 1000px;
-    width: 100%;
+    background-size: cover;
+    height: 800px;
 }
 
 h1{
