--- a/css.css
+++ b/css.css
@@ -9,6 +9,7 @@
 img{
     width: 100%;
     border-radius: 20px;
+    display: block;
 }
 
 .class-column{
@@ -18,12 +19,13 @@ img{
     width: 80%;
     margin: auto;
     margin-top: 40px;
-    margin-bottom: 50px;
+    height: 480px;
 }
 #index-top{
     /* Center Text */
     display: grid;
     place-content: center;
+    font-size: 40px;
     /* Add background image */
     background-image: 
     linear-gradient(180deg, rgba(255, 255, 255, 0.5),
@@ -42,4 +44,19 @@ h1{
     background-color: #b3b3b3;
     height: 200px;
     text-align: center;
+}
+
+div{
+    text-align: center;
+}
+
+div.about p{
+    text-align: left;
+}
+
+div.history p{
+    text-align: right;
+}
+#index-history{
+    background-color: #ff5e53;
 }
