--- a/css.css
+++ b/css.css
@@ -32,8 +32,8 @@ img{
     font-size: 40px;
     /* Add background image */
     background-image: 
-    linear-gradient(180deg, rgba(255, 255, 255, 0.5),
-    rgba(255, 94, 83, 0.5)),
+    linear-gradient(180deg, rgba(255, 255, 255, 0.664),
+    rgba(255, 126, 116, 0.26)),
     url("./Te Puia Resources/Images/mudpool.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -72,4 +72,36 @@ div.history p{
 }
 a{
 color: #0c4187;
+}
+#history-top{
+    /* Center Text */
+    display: grid;
+    place-content: center;
+    font-size: 40px;
+    /* Add background image */
+    background-image: 
+    linear-gradient(180deg, rgba(255, 255, 255, 0.5),
+    rgba(255, 94, 83, 0.5)),
+    url("./Te Puia Resources/Images/mudpool.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 400px;
+    margin: 0%;
+}
+#history-text{
+    display: grid;
+    grid-template-columns: 3fr 5fr;
+    gap: 20px;
+    width: auto;
+    margin: auto;
+    background-image:  
+    linear-gradient(180deg, #dcdcdcff,
+    #ffe6e6a0),
+    url("./Te Puia Resources/Images/giser.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0%;
+    height: 450px;
 }
