--- a/css.css
+++ b/css.css
@@ -127,6 +127,7 @@ color: #0c4187;
     margin: 0%;
     height: 450px;
 }
+
 #we-class-text{
     display: grid;
     grid-template-columns: 3fr 5fr;
@@ -142,4 +143,21 @@ color: #0c4187;
     background-size: cover;
     margin: 0%;
     height: 450px;
+}
+
+nav{
+    height: 30px;
+    text-align: right;
+    background-image:  
+    linear-gradient(90deg, #dcdcdc,
+    #FFE6e6);
+    padding-left: 1%;
+    padding-right: 1%;
+    font-size: 25px;
+    color: black;
+}
+
+body{
+    padding: 0;
+    margin: 0;
 }
