--- a/css.css
+++ b/css.css
@@ -151,13 +151,31 @@ nav{
     background-image:  
     linear-gradient(90deg, #dcdcdc,
     #FFE6e6);
-    padding-left: 1%;
-    padding-right: 1%;
     font-size: 25px;
     color: black;
+    padding-right: 5px;
+    padding-top: 2px;
 }
 
 body{
     padding: 0;
     margin: 0;
+}
+
+a.nav{
+    border-left: 1px groove black;
+    border-right: 1px groove black;
+    margin:0;
+    text-decoration: none;
+    padding: 1px;
+
+}
+
+a:hover.nav{
+    border: 2px inset black;
+    margin:0;
+    text-decoration: none;
+    padding: 0px;
+    background-color: #dcdcdc;
+    color: black;
 }
