--- a/css.css
+++ b/css.css
@@ -1,3 +1,8 @@
+@import url(https://fonts.googleapis.com/css?family=Dosis);
+h1{
+    font-family: "Dosis";
+}
+
 section{
     padding: 10PX;
     width: auto;
@@ -167,6 +172,7 @@ body{
 body::-webkit-scrollbar{
     width: 1px;
 }
+
 a.nav{
     border-left: 1px groove black;
     border-right: 1px groove black;
