--- a/css.css
+++ b/css.css
@@ -207,3 +207,9 @@ a:hover.nav{
     background-color: #ffe6e6;
     color: black;
 }
+
+.img{
+    padding: 3px;
+    background-color:  black;
+    border-radius: 24px;
+}
