--- a/css.css
+++ b/css.css
@@ -96,7 +96,7 @@ a{
     /* Center Text */
     display: grid;
     place-content: center;
-    font-size: 2em;
+    font-size: 4em;
     /* Add background image */
     background-image: 
     linear-gradient(180deg, rgba(255, 255, 255, 0.5),
@@ -213,4 +213,21 @@ a:hover.nav{
     padding: 3px;
     background-color:  black;
     border-radius: 24px;
+}
+
+#class-top{
+    /* Center Text */
+    display: grid;
+    place-content: center;
+    font-size: 2em;
+    /* Add background image */
+    background-image: 
+    linear-gradient(180deg, rgba(255, 255, 255, 0.5),
+    rgba(255, 126, 116, 0.26)),
+    url("./Te Puia Resources/Images/mudpool.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 400px;
+    margin: 0%;
 }
