--- a/css.css
+++ b/css.css
@@ -211,7 +211,7 @@ a:hover.nav{
 
 .img{
     padding: 3px;
-    background-color:  black;
+    background-color:  rgba(58, 58, 58, 0.493);
     border-radius: 24px;
 }
 
