--- a/css.css
+++ b/css.css
@@ -1,5 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Dosis);
 @import url(https://fonts.googleapis.com/css?family=Comfortaa);
+
+/* fonts */
 h1{
     font-family: 'Dosis';
 }
@@ -9,134 +11,10 @@ h3{
     font-family: 'Dosis';
 }
 
-section{
-    padding: 10PX;
-    width: auto;
-}
-
-.two-column{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-    width: auto;
-    margin: auto;
-    font-family:'Comfortaa';
-}
-
-img{
-    width: 100%;
-    border-radius: 20px;
-    display: block;
-    border: 1px soild black;
-}
-
-.class-column{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 100px;
-    width: 80%;
-    margin: auto;
-    margin-top: 40px;
-    height: 480px;
-    font-family:'Comfortaa';
-}
-
-#index-top{
-    /* Center Text */
-    display: grid;
-    place-content: center;
-    font-size: 4em;
-    /* Add background image */
-    background-image: 
-    linear-gradient(180deg, rgba(255, 255, 255, 0.664),
-    rgba(255, 126, 116, 0.26)),
-    url("./Te Puia Resources/Images/mudpool.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 800px;
-    margin: 0%;
-}
-
-.collem_two{
-    background-color: #dcdcdc;
-    height: 200px;
-    text-align: center;
-    font-family:'Comfortaa';
-}
-
-div{
-    text-align: center;
-}
-
-div.text-left p{
-    text-align: left;
-    margin-left: 20px;
-}
-
-div.text-right p{
-    text-align: right;
-    margin-right: 20px;
-}
-
-#index-history{
-    background-color: #ffe6e6;
-}
-
-#we-img{
-    background-color: #ffd6a1;
-}
-
-#index-about{
-    background-color: #dcdcdc
-}
-
-a{
-    color: #0c4187;
-    font-family:'Comfortaa';
-}
-
-#history-top{
-    /* Center Text */
-    display: grid;
-    place-content: center;
-    font-size: 4em;
-    /* Add background image */
-    background-image: 
-    linear-gradient(180deg, rgba(255, 255, 255, 0.5),
-    rgba(255, 126, 116, 0.26)),
-    url("./Te Puia Resources/Images/mudpool.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 400px;
-    margin: 0%;
-}
-
-#history-text{
-    display: grid;
-    grid-template-columns: 3fr 5fr;
-    gap: 20px;
-    width: auto;
-    margin: auto;
-    background-image:  
-    linear-gradient(180deg, #ffe6e6ff,
-    #ffe6e6a0),
-    url("./Te Puia Resources/Images/giser.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin: 0%;
-    height: 450px;
-    font-family:'Comfortaa';
-}
-
+/* Nav Bar */
 nav{
     height: 29px;
     text-align: left;
-    background-image:  
-    linear-gradient(90deg, #dcdcdc,
-    #FFE6e6);
     font-size: 25px;
     color: black;
     padding-right: 2.5px;
@@ -144,16 +22,9 @@ nav{
     padding-top: 2px;
     margin-left: 2px;
     font-family:'Comfortaa';
-}
-
-body{
-    padding: 0;
-    margin: 0;
-    overflow-x: hidden;
-}
-
-body::-webkit-scrollbar{
-    width: 1px;
+    background-image:  
+    linear-gradient(90deg, #dcdcdc,
+    #DADCD7);
 }
 
 a.nav{
@@ -173,8 +44,32 @@ a:hover.nav{
     padding: 0px;
     padding-left: 2px;
     padding-right: 2px;
-    background-color: #ffe6e6;
+    background-color: #dcdcdc;
     color: black;
+}
+
+/* All Pages */
+body{
+    padding: 0;
+    margin: 0;
+    overflow-x: hidden;
+    background-color: #F2EFE2;
+}
+
+body::-webkit-scrollbar{
+    width: 1px;
+}
+
+section{
+    padding: 10PX;
+    width: auto;
+}
+
+img{
+    width: 100%;
+    border-radius: 20px;
+    display: block;
+    border: 1px soild black;
 }
 
 .img{
@@ -183,16 +78,79 @@ a:hover.nav{
     border-radius: 24px;
 }
 
-/*Classes page*/
-#class-top{
+.two-column{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    width: auto;
+    margin: auto;
+    font-family:'Comfortaa';
+}
+
+div{
+    text-align: center;
+}
+
+div.text-left p{
+    text-align: left;
+    margin-left: 20px;
+}
+
+div.text-right p{
+    text-align: right;
+    margin-right: 20px;
+}
+
+a{
+    color: #0c4187;
+    font-family:'Comfortaa';
+}
+
+/* Home Page */
+#index-top{
     /* Center Text */
     display: grid;
     place-content: center;
-    font-size: 2em;
+    font-size: 4em;
     /* Add background image */
     background-image: 
-    linear-gradient(180deg, rgba(255, 255, 255, 0.5),
-    #ffd6a1a0),
+    linear-gradient(180deg, #DADCD7a0, #F2EFE2a0),
+    url("./Te Puia Resources/Images/mudpool.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 800px;
+    margin: 0%;
+}
+
+.class-column{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 100px;
+    width: 80%;
+    margin: auto;
+    padding-top: 40px;
+    height: 480px;
+    font-family:'Comfortaa';
+}
+
+.collem_two{
+    background-color: #dad7cb;
+    height: 200px;
+    text-align: center;
+    font-family:'Comfortaa';
+}
+
+
+/* History Page */
+#history-top{
+    /* Center Text */
+    display: grid;
+    place-content: center;
+    font-size: 4em;
+    /* Add background image */
+    background-image: 
+    linear-gradient(180deg, #DADCD7a0, #F2EFE2a0),
     url("./Te Puia Resources/Images/mudpool.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -201,14 +159,39 @@ a:hover.nav{
     margin: 0%;
 }
 
-.class-ti{
+#history-text{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 3fr 5fr;
     gap: 20px;
     width: auto;
     margin: auto;
+    background-image:  
+    linear-gradient(180deg, #DADCD7a0, #F2EFE2a0),
+    url("./Te Puia Resources/Images/giser.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0%;
+    height: 450px;
     font-family:'Comfortaa';
-    background-color: #ffd6a1;
+}
+
+/* Classes page */
+#class-top{
+    /* Center Text */
+    display: grid;
+    place-content: center;
+    font-size: 2em;
+    /* Add background image */
+    background-image: 
+    linear-gradient(180deg, rgba(255, 255, 255, 0.664),
+    #d8dfced0),
+    url("./Te Puia Resources/Images/mudpool.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 400px;
+    margin: 0%;
 }
 
 #class-text-weaving{
@@ -218,8 +201,8 @@ a:hover.nav{
     width: auto;
     margin: auto;
     background-image:  
-    linear-gradient(180deg, #ffd6a1,
-    #ffd6a1a0),
+    linear-gradient(180deg, #F2EFE2,
+    #F2EFE2c0),
     url("./Te Puia Resources/Images/barstets.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -236,8 +219,8 @@ a:hover.nav{
     width: auto;
     margin: auto;
     background-image:  
-    linear-gradient(180deg, #D0A06C,
-    #ffd6a1a0),
+    linear-gradient(180deg, #F2EFE2,
+    #F2EFE2c0),
     url("./Te Puia Resources/Images/w-class.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -245,32 +228,4 @@ a:hover.nav{
     margin: 0%;
     height: 450px;
     font-family:'Comfortaa';
-}
-#carving{
-    background-color: #D0A06C;
-}
-nav#class{
-    background-image:  
-    linear-gradient(90deg, #dcdcdc,
-    #ffd6a1);
-}
-a:hover.nav-class{
-    border: 2px inset black;
-    margin:0;
-    text-decoration: none;
-    padding: 0px;
-    padding-left: 2px;
-    padding-right: 2px;
-    background-color: #D0A06C;
-    color: black;
-}
-
-a.nav-class{
-    border-left: 1px groove black;
-    border-right: 1px groove black;
-    margin:0;
-    text-decoration: none;
-    padding: 1px;
-    padding-left: 3px;
-    padding-right: 3px;
 }
